welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:10: error: ';' expected but '{' found.
  while (crossing() == false) {{avance(); if 			   (estSurBiscuit == true) {compteur1 = compteur1 + 1}}
                              ^